Add downloadable resume and angelist info

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!-- [if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif] -->
+		<!-- icons -->
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	</head>
 	<body class="index">
 		<div id="page-wrapper">
@@ -22,9 +31,9 @@
 					<h1 id="logo"><a href="index.html">Alexandra Savramis </a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Portfolio</a></li>
-							<li class="current"><a href="index.html">Experience</a></li>
-							<li class="current"><a href="index.html">Technologies</a></li>
+							<li class="current"><a href="#portfolio">Portfolio</a></li>
+							<li class="current"><a href="#experience">Experience</a></li>
+							<li class="current"><a href="#technologies">Technologies</a></li>
 							<li><a href="contact.html" class="button special">Contact</a></li>
 						</ul>
 					</nav>
@@ -48,11 +57,6 @@
 								I love seeing things from a different perspective. <br />I have creative roots, and seek to bring the technical <br />and
 								creative together to build delightful,<br /> intuitive experiences.
 							</p>
-						<footer>
-							<ul class="buttons vertical">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
-							</ul>
-						</footer>
 
 					</div>
 
@@ -61,41 +65,35 @@
 			<!-- Main -->
 				<article id="main">
 
-					<header class="special container">
-						<span class="icon fa-bar-chart-o"></span>
+					<header class="special container" id="experience">
+						<span class="icon fa-terminal"></span>
 						<h2>WHO I AM</h2>
 						<br />
 						<p>
-						I love seeing things from a different perspective. I have creative roots, and seek to bring the technical and
-						creative together to build delightful, intuitive experiences.
+						I have a background in Film & TV Production. I am someone who is constantly pursuing extracurriculars to widen my breadth of knowledge, and while working, I decided that I wanted to create a website to showcase my paintings and make it more accessible to potential clients. I was eager to tackle the challenge of building an interface in which I had no previous experience with, and began exploring Lynda, an amazing resource with a plethora of courses on coding. As I built my personal website through the guidance of the lectures, learning about JavaScript, HTML and CSS, it became apparent that this was more of a passion than an extracurricular. I decided to take the leap into the coding industry, and went on to sharpen my skills in React / Redux, Ruby, and JavaScript.
 						</p>
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style2 container special-alt">
+						<section class="wrapper style2 container special-alt" id="technologies">
 							<div class="row 50%">
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>Don't see your stack listed here? No problem - I enjoy learning new frameworks.</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-									<footer>
-										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
-										</ul>
-									</footer>
+									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React / Redux and HTML / CSS. Whether you're looking for frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
 
 								</div>
 								<div class="4u 12u(narrower) important(narrower)">
 
 									<ul class="featured-icons">
-										<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
+										<li><i class="devicon-postgresql-plain"></i><span class="label">PostgreSQL</span></span></li>
+										<li><i class="devicon-javascript-plain"></i><span class="label">JavaScript</span></span></li>
+										<li><i class="devicon-react-original"></i><span class="label">React</span></span></li>
+										<li><i class="devicon-rails-plain"></i><span class="label">Rails</span></span></li>
+										<li><i class="devicon-git-plain"></i><span class="label">Git</span></span></li>
+										<li><i class="devicon-github-plain"></i><span class="label">Github</span></span></li>
 									</ul>
 
 								</div>
@@ -108,11 +106,12 @@
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span><i class="devicon-rails-plain"></i></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Ruby on Rails</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>I use Ruby to develop iterative, scalable backends for web apps - from generating user auth to writing complex server-side scripts.
+										</p>
 									</section>
 
 								</div>
@@ -121,9 +120,9 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>JavaScript</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>I create dynamic, interactive sites using JavaScript. I can develop client-side scripts for your application or upgrade existing projects to use ES6 syntax.</p>
 									</section>
 
 								</div>
@@ -132,9 +131,9 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>React / Redux</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>I use React to create single-page apps that function across devices. I know how to  utilize Redux architecture's unidirectional data flow with React for predictable state and reliablle DOM rendering.</p>
 									</section>
 
 								</div>
@@ -142,32 +141,46 @@
 						</section>
 
 					<!-- Three -->
-						<section class="wrapper style3 container special">
+						<section class="wrapper style3 container special" id="portfolio">
 
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2>DESIGN <strong>PORTFOLIO</strong></h2>
 							</header>
 
 							<div class="row">
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://briemcnally.github.io/rove/index.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3><strong>WEEKEND PLANNER</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>Built with Ruby on Rails, React Native, and Redux</p>
+										<p>Weekend Planner is an iOS / Android mobile application designed to build users an intuitive itinerary. With a team of four developers, we created a cross-platform mobile application with React Native for iOS and Android. I
+										integrated the backend with external APIs, such as angellist Places API, and used open source libraries to expedite the development process.
+										</p>
+										<footer>
+											<ul>
+												<li><a href="https://github.com/as6730/Rove" class="icon circle fa-github"></a></li>
+											</ul>
+										</footer>
 									</section>
 
 								</div>
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://justeat.herokuapp.com/#/" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3><strong>JUST EAT</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>Built with Ruby on Rails (PostgreSQL), React JS, and Redux</p>
+										<p>Just Eat is a Full-Stack web application that allows users to search, discover and review restaurants. I formulated a dynamic single-page ReactJS app allowing for seamless navigation. I implemented persistent storage of users, reservations, and reviews through PostgreSQL db. Just Eat has a RESTful API through a Ruby on Rails backend, and utilizes backend logic and AJAX requests for handling search queries to generate unique results.</p>
+										<footer>
+											<ul>
+												<li><a href="https://github.com/as6730/JustEats" class="icon circle fa-github"></a></li>
+											</ul>
+										</footer>
 									</section>
 
 								</div>
@@ -176,33 +189,20 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://as6730.github.io/Galaga-Rebubbled/" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3><strong>GALAGA (GAME)</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>Built with JavaScript, Canvas API, and HTML5</p>
+										<p>Galaga is an interactive game built with HTML canvas using Object-Oriented Design. I generated algorithms grounded in physics for character collision, and threaded keyboard event listeners respond to player movement. I adhered to standards of OOP patterns, enabling abstraction of functionality into reusable classes.</p>
+										<footer>
+											<ul>
+												<li><a href="https://github.com/as6730/Galaga-Rebubbled" class="icon circle fa-github"></a></li>
+											</ul>
+										</footer>
 									</section>
-
-								</div>
-								<div class="6u 12u(narrower)">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>And Another Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
 								</div>
 							</div>
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
-								</ul>
-							</footer>
-
 						</section>
 
 				</article>
@@ -211,13 +211,13 @@
 				<section id="cta">
 
 					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<h2>Let's <strong>connect</strong>!</h2>
+						<p>I am excited to join an engineering team focused on growth and collaboration.</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button special">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="https://github.com/as6730" class="button">View Github Profile</a></li>
+							<li><a href="./images/Alexandra_Savramis_Resume.pdf" class="button">Download My Resume</a></li>
 						</ul>
 					</footer>
 
@@ -227,11 +227,9 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alexandrasavramis/" class="icon circle fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/as6730" class="icon circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://angel.co/alexandra-savramis" class="icon circle fa-angellist"><span class="label">AngelList</span></a></li>
 					</ul>
 
 					<ul class="copyright">
