--- a/contact.html
+++ b/contact.html
@@ -81,11 +81,9 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alexandrasavramis/" class="icon circle fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/as6730" class="icon circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://angel.co/alexandra-savramis" class="icon circle fa-angellist"><span class="label">angellist</span></a></li>
 					</ul>
 
 					<ul class="copyright">
