--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -167,11 +167,11 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="#" class="icon circle fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon circle fa-linkedin"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon circle fa-angellist-plus"><span class="label">angellist+</span></a></li>
 						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon circle fa-angellist"><span class="label">angellist</span></a></li>
 					</ul>
 
 					<ul class="copyright">
