Add icons for languages and clean up styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	</head>
 	<body class="index">
 		<div id="page-wrapper">
@@ -82,18 +84,20 @@
 									<header>
 										<h2>Don't see your stack listed here? No problem - I enjoy learning new frameworks.</h2>
 									</header>
-									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React / Redux and HTML / CSS. Whether you're looking for frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
+									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React / Redux and HTML / CSS. Whether you're looking for a frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
 
 								</div>
 								<div class="4u 12u(narrower) important(narrower)">
 
 									<ul class="featured-icons">
-										<li><i class="devicon-postgresql-plain"></i><span class="label">PostgreSQL</span></span></li>
-										<li><i class="devicon-javascript-plain"></i><span class="label">JavaScript</span></span></li>
-										<li><i class="devicon-react-original"></i><span class="label">React</span></span></li>
-										<li><i class="devicon-rails-plain"></i><span class="label">Rails</span></span></li>
-										<li><i class="devicon-git-plain"></i><span class="label">Git</span></span></li>
-										<li><i class="devicon-github-plain"></i><span class="label">Github</span></span></li>
+										<li><i class="devicon-postgresql-plain-wordmark"></i></li>
+										<li><i class="devicon-javascript-plain"></i></li>
+										<li><i class="devicon-react-original-wordmark"></i></li>
+										<li><i class="devicon-rails-plain-wordmark"></i></li>
+										<li><i class="devicon-git-plain-wordmark"></i></li>
+										<li><i class="devicon-github-plain-wordmark"></i></li>
+										<li><i class="devicon-jquery-plain-wordmark"></i></li>
+										<li><i class="devicon-sass-original"></i></li>
 									</ul>
 
 								</div>
@@ -118,7 +122,7 @@
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span><i class="devicon-javascript-plain"></i></span>
 										<header>
 											<h3>JavaScript</h3>
 										</header>
@@ -129,11 +133,11 @@
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-check"></span>
+										<span><i class="devicon-react-original"></i></span>
 										<header>
 											<h3>React / Redux</h3>
 										</header>
-										<p>I use React to create single-page apps that function across devices. I know how to  utilize Redux architecture's unidirectional data flow with React for predictable state and reliablle DOM rendering.</p>
+										<p>I use React to create single-page apps that function across devices. I know how to  utilize Redux architecture's unidirectional data flow with React for predictable state and reliable DOM rendering.</p>
 									</section>
 
 								</div>
@@ -145,6 +149,7 @@
 
 							<header class="major">
 								<h2>DESIGN <strong>PORTFOLIO</strong></h2>
+								<p>A selection of my favorite recent projects.</p>
 							</header>
 
 							<div class="row">
@@ -161,7 +166,8 @@
 										</p>
 										<footer>
 											<ul>
-												<li><a href="https://github.com/as6730/Rove" class="icon circle fa-github"></a></li>
+												<li><a href="https://github.com/as6730/Rove" class="button">GitHub</a>
+												<a href="https://briemcnally.github.io/rove/index.html" class="button">Live</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -178,7 +184,8 @@
 										<p>Just Eat is a Full-Stack web application that allows users to search, discover and review restaurants. I formulated a dynamic single-page ReactJS app allowing for seamless navigation. I implemented persistent storage of users, reservations, and reviews through PostgreSQL db. Just Eat has a RESTful API through a Ruby on Rails backend, and utilizes backend logic and AJAX requests for handling search queries to generate unique results.</p>
 										<footer>
 											<ul>
-												<li><a href="https://github.com/as6730/JustEats" class="icon circle fa-github"></a></li>
+												<li><a href="https://github.com/as6730/JustEats" class="button">GitHub</a>
+												<a href="https://justeat.herokuapp.com/#/" class="button">Live</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -197,7 +204,8 @@
 										<p>Galaga is an interactive game built with HTML canvas using Object-Oriented Design. I generated algorithms grounded in physics for character collision, and threaded keyboard event listeners respond to player movement. I adhered to standards of OOP patterns, enabling abstraction of functionality into reusable classes.</p>
 										<footer>
 											<ul>
-												<li><a href="https://github.com/as6730/Galaga-Rebubbled" class="icon circle fa-github"></a></li>
+												<li><a href="https://github.com/as6730/Galaga-Rebubbled" class="button">GitHub</a>
+												<a href="https://as6730.github.io/Galaga-Rebubbled/" class="button">Live</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -216,7 +224,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="https://github.com/as6730" class="button">View Github Profile</a></li>
+							<li><a href="https://github.com/as6730" class="button">View GitHub Profile</a></li>
 							<li><a href="./images/Alexandra_Savramis_Resume.pdf" class="button">Download My Resume</a></li>
 						</ul>
 					</footer>
