Add correct link for rove live

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="https://briemcnally.github.io/rove/index.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://briemcnally.github.io/ROVE_Landing_Page/" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3><strong>WEEKEND PLANNER</strong></h3>
 										</header>
@@ -167,7 +167,7 @@
 										<footer>
 											<ul>
 												<li><a href="https://github.com/as6730/Rove" class="button">GitHub</a>
-												<a href="https://briemcnally.github.io/rove/index.html" class="button">Live</a></li>
+												<a href="https://briemcnally.github.io/ROVE_Landing_Page/" class="button">Live</a></li>
 											</ul>
 										</footer>
 									</section>
