Add JS for React

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<h2>WHO I AM</h2>
 						<br />
 						<p>
-						I have a background in Film & TV Production. I am someone who is constantly pursuing extracurriculars to widen my breadth of knowledge, and while working, I decided that I wanted to create a website to showcase my paintings and make it more accessible to potential clients. I was eager to tackle the challenge of building an interface in which I had no previous experience with, and began exploring Lynda, an amazing resource with a plethora of courses on coding. As I built my personal website through the guidance of the lectures, learning about JavaScript, HTML and CSS, it became apparent that this was more of a passion than an extracurricular. I decided to take the leap into the coding industry, and went on to sharpen my skills in React / Redux, Ruby, and JavaScript.
+						I have a background in Film & TV Production. I am someone who is constantly pursuing extracurriculars to widen my breadth of knowledge, and while working, I decided that I wanted to create a website to showcase my paintings and make it more accessible to potential clients. I was eager to tackle the challenge of building an interface in which I had no previous experience with, and began exploring Lynda, an amazing resource with a plethora of courses on coding. As I built my personal website through the guidance of the lectures, learning about JavaScript, HTML and CSS, it became apparent that this was more of a passion than an extracurricular. I decided to take the leap into the coding industry, and went on to sharpen my skills in React JS / Redux, Ruby, and JavaScript.
 						</p>
 					</header>
 
@@ -84,7 +84,7 @@
 									<header>
 										<h2>Don't see your stack listed here? No problem - I enjoy learning new frameworks.</h2>
 									</header>
-									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React / Redux and HTML / CSS. Whether you're looking for a frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
+									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React JS / Redux and HTML / CSS. Whether you're looking for a frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
 
 								</div>
 								<div class="4u 12u(narrower) important(narrower)">
@@ -135,9 +135,9 @@
 									<section>
 										<span><i class="devicon-react-original"></i></span>
 										<header>
-											<h3>React / Redux</h3>
+											<h3>React JS / Redux</h3>
 										</header>
-										<p>I use React to create single-page apps that function across devices. I know how to  utilize Redux architecture's unidirectional data flow with React for predictable state and reliable DOM rendering.</p>
+										<p>I use React JS to create single-page apps that function across devices. I know how to  utilize Redux architecture's unidirectional data flow with React JS for predictable state and reliable DOM rendering.</p>
 									</section>
 
 								</div>
@@ -181,7 +181,7 @@
 											<h3><strong>JUST EAT</strong></h3>
 										</header>
 										<p>Built with Ruby on Rails (PostgreSQL), React JS, and Redux</p>
-										<p>Just Eat is a Full-Stack web application that allows users to search, discover and review restaurants. I formulated a dynamic single-page ReactJS app allowing for seamless navigation. I implemented persistent storage of users, reservations, and reviews through PostgreSQL db. Just Eat has a RESTful API through a Ruby on Rails backend, and utilizes backend logic and AJAX requests for handling search queries to generate unique results.</p>
+										<p>Just Eat is a Full-Stack web application that allows users to search, discover and review restaurants. I formulated a dynamic single-page React JS app allowing for seamless navigation. I implemented persistent storage of users, reservations, and reviews through PostgreSQL db. Just Eat has a RESTful API through a Ruby on Rails backend, and utilizes backend logic and AJAX requests for handling search queries to generate unique results.</p>
 										<footer>
 											<ul>
 												<li><a href="https://github.com/as6730/JustEats" class="button">GitHub</a>
