Add links to index page from contact page

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
 					<h1 id="logo"><a href="index.html">Alexandra Savramis</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Portfolio</a></li>
-							<li class="current"><a href="index.html">Experience</a></li>
-							<li class="current"><a href="index.html">Technologies</a></li>
+							<li class="current"><a href="index.html#portfolio">Portfolio</a></li>
+							<li class="current"><a href="index.html#experience">Experience</a></li>
+							<li class="current"><a href="index.html#technologies">Technologies</a></li>
 							<li><a href="contact.html" class="button special">Contact</a></li>
 						</ul>
 					</nav>
