--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 						<span class="icon fa-terminal"></span>
 						<h2>WHO I AM</h2>
 						<br />
+						<p>Full-Stack Software Developer | Here is my story . . .</p>
 						<p>
-						I have a background in Film & TV Production. I am someone who is constantly pursuing extracurriculars to widen my breadth of knowledge, and while working, I decided that I wanted to create a website to showcase my paintings and make it more accessible to potential clients. I was eager to tackle the challenge of building an interface in which I had no previous experience with, and began exploring Lynda, an amazing resource with a plethora of courses on coding. As I built my personal website through the guidance of the lectures, learning about JavaScript, HTML and CSS, it became apparent that this was more of a passion than an extracurricular. I decided to take the leap into the coding industry, and went on to sharpen my skills in React JS / Redux, Ruby, and JavaScript.
+						I am someone who is constantly pursuing extracurriculars to widen my breadth of knowledge. While I was working in Film & TV, I decided that I wanted to create a website to showcase my paintings and make it more accessible to potential clients. I was eager to tackle the challenge of building an interface in which I had no previous experience with, and began exploring Lynda, an amazing resource with a plethora of courses on coding. As I built my personal website through the guidance of the lectures, learning about JavaScript, HTML and CSS, it became apparent that this was more of a passion than an extracurricular. I decided to take the leap into the coding industry, and went on to sharpen my skills in React JS / Redux, Ruby, and JavaScript.
 						</p>
 					</header>
 
@@ -82,10 +83,19 @@
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>Don't see your stack listed here? No problem - I enjoy learning new frameworks.</h2>
+										<h2>I enjoy learning new frameworks.</h2>
 									</header>
 									<p>I have experience building dynamic web applications in JavaScript, Ruby on Rails, React JS / Redux and HTML / CSS. Whether you're looking for a frontend, backend, or fullstack engineer, I am equipped with the tools to get the job done. </p>
-
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<br/>
+									<p>Don't see your stack listed here? No problem. I'm ready to get started.</p>
 								</div>
 								<div class="4u 12u(narrower) important(narrower)">
 
