--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="https://as6730.github.io/Galaga-Rebubbled/" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://as6730.github.io/Galaga-Rebubbled/" class="image featured"><img src="assets/gifs/galaga.gif" alt="" /></a>
 										<header>
 											<h3><strong>GALAGA (GAME)</strong></h3>
 										</header>
