Add photos for projects and email information

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="https://briemcnally.github.io/ROVE_Landing_Page/" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://briemcnally.github.io/ROVE_Landing_Page/" class="image featured"><img src="assets/gifs/rove.png" alt="WEEKEND PLANNER" /></a>
 										<header>
 											<h3><strong>WEEKEND PLANNER</strong></h3>
 										</header>
@@ -186,7 +186,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="https://justeat.herokuapp.com/#/" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://justeat.herokuapp.com/#/" class="image featured"><img src="assets/gifs/justeat_show_page.png" alt="Just Eat" /></a>
 										<header>
 											<h3><strong>JUST EAT</strong></h3>
 										</header>
@@ -206,7 +206,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="https://as6730.github.io/Galaga-Rebubbled/" class="image featured"><img src="assets/gifs/galaga.gif" alt="" /></a>
+										<a href="https://as6730.github.io/Galaga-Rebubbled/" class="image featured"><img src="assets/gifs/galaga.gif" alt="Game" /></a>
 										<header>
 											<h3><strong>GALAGA (GAME)</strong></h3>
 										</header>
@@ -249,7 +249,8 @@
 						<li><a href="https://github.com/as6730" class="icon circle fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://angel.co/alexandra-savramis" class="icon circle fa-angellist"><span class="label">AngelList</span></a></li>
 					</ul>
-
+					<p class="email-footer">Let's get in contact!</p>
+					<p class="email-footer">Email me at <a href="mailto:alexandra.savramis@gmail.com">alexandra.savramis@gmail.com</a></p>
 					<ul class="copyright">
 						<li>&copy; Alexandra Savramis</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
