--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 										</header>
 										<p>Built with Ruby on Rails, React Native, and Redux</p>
 										<p>Weekend Planner is an iOS / Android mobile application designed to build users an intuitive itinerary. With a team of four developers, we created a cross-platform mobile application with React Native for iOS and Android. I
-										integrated the backend with external APIs, such as angellist Places API, and used open source libraries to expedite the development process.
+										integrated the backend with external APIs, such as Google Places API, and used open source libraries to expedite the development process.
 										</p>
 										<footer>
 											<ul>
